feat(auth): implement JWT authentication with login, register, and token refresh
New files:
- core/security.py: password hashing (bcrypt), JWT create/decode,
  refresh token generation, SHA-256 token hashing
- schema/auth.py: Pydantic v2 schemas (register, login, refresh,
  token response, user response)
- service/auth_service.py: register, login, token refresh, logout
  with refresh token rotation
- api/v1/endpoints/auth.py: 5 endpoints (register, login, refresh,
  logout, me) with device tracking
- api/deps.py: OAuth2 bearer dependency, get_current_user,
  get_current_active_user
- alembic/versions/seed_default_roles.py: seed system/project roles

Modified:
- core/config.py: add JWT settings (secret, algorithm, expiry)
- main.py: register auth router under /api/v1
- pyproject.toml: add email-validator dependency

Package init files for api, endpoints, schema, and service modules.

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -29,6 +29,7 @@ dependencies = [
     "pillow>=12.1.0",
     # Utilities
     "uuid-utils>=0.14.0",
+    "email-validator>=2.3.0",
 ]
 
 [dependency-groups]
