--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -39,6 +39,19 @@ dev = [
     "pytest-cov>=5.0.0",
     "httpx>=0.28.1",  # For testing
     "faker>=33.3.0",  # Test data generation
+    "ruff>=0.9.0",    # Linting
+]
+
+[tool.pytest.ini_options]
+minversion = "6.0"
+addopts = "-ra -q --cov=app --cov-report=term-missing"
+testpaths = [
+    "tests",
+]
+asyncio_mode = "auto"
+asyncio_default_fixture_loop_scope = "function"
+pythonpath = [
+    ".",
 ]
 
 
