--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,6 @@ jobs:
           POSTGRES_DB: sophikon_test
         ports:
           - 5432:5432
-        # Set health checks to wait until postgres has started
         options: >-
           --health-cmd pg_isready
           --health-interval 10s
@@ -32,25 +31,26 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
-    - name: Set up Python 3.13
-      uses: actions/setup-python@v5
+    - name: Install uv
+      uses: astral-sh/setup-uv@v2
       with:
-        python-version: "3.13"
+        enable-cache: true
+        cache-local-path: "/backend/.uv-cache"
+
+    - name: Set up Python
+      run: uv python install 3.13
 
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install -e ".[dev]"
+        uv sync --all-extras --dev
 
     - name: Lint with Ruff
       run: |
-        # Stop the build if there are Python syntax errors or undefined names
-        ruff check .
-        # Check formatting
-        ruff format --check .
+        uv run ruff check .
+        uv run ruff format --check .
 
     - name: Run tests
       env:
         DATABASE_URL: postgresql+asyncpg://sophikon_user:Soph1k0n_Dev_2026!@localhost:5432/sophikon_test
       run: |
-        pytest
+        uv run pytest
