Fix: Add setup.py to prevent setuptools from discovering alembic

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -1,3 +1,7 @@
+[build-system]
+requires = ["setuptools>=61", "wheel"]
+build-backend = "setuptools.build_meta"
+
 [project]
 name = "sophikon-backend"
 version = "0.1.0"
@@ -56,4 +60,3 @@ pythonpath = [
 
 [tool.setuptools]
 packages = ["app"]
-
