--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -58,5 +58,8 @@ pythonpath = [
     ".",
 ]
 
-[tool.setuptools]
-packages = ["app"]
+[tool.setuptools.packages.find]
+where = ["."]
+include = ["app*"]
+exclude = ["alembic*", "tests*"]
+
