fix(infra): resolve uv cache permission error in CI workflow
Remove hardcoded /backend/.uv-cache path that causes permission denied errors. Use UV_CACHE_DIR environment variable pointing to /tmp/.uv-cache which is writable in GitHub Actions.

Modified:
- .github/workflows/ci.yml: remove cache-local-path, add UV_CACHE_DIR env var in Set up Python step

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,9 +35,10 @@ jobs:
       uses: astral-sh/setup-uv@v2
       with:
         enable-cache: true
-        cache-local-path: "/backend/.uv-cache"
 
     - name: Set up Python
+      env:
+        UV_CACHE_DIR: /tmp/.uv-cache
       run: uv python install 3.13
 
     - name: Install dependencies
