--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -21,7 +21,7 @@ dependencies = [
     "alembic>=1.18.3",
     # Authentication
     "python-jose[cryptography]>=3.5.0",
-    "passlib[bcrypt]>=1.7.4",
+    "bcrypt>=4.0.0",
     "python-multipart>=0.0.22",
     # Redis
     "redis>=7.1.0",
