chore(tooling): add ruff, prettier, eslint configs and fix all lint errors
Tooling:
- .pre-commit-config.yaml: replace remote repos with local hooks, scope ruff to backend/, eslint+prettier to frontend/, add standard hooks (trailing-whitespace, end-of-file-fixer, check-yaml, check-merge-conflict)
- backend/pyproject.toml: add [tool.ruff] config (line-length=88, py313, E/F/I/UP rules, isort)
- frontend/.prettierrc.json: add prettier config with standard defaults
- frontend/package.json: add prettier + prettier-plugin-tailwindcss devDeps, add format script
- frontend/.env.example: document VITE_API_BASE_URL env var
- frontend/eslint.config.js: simplify config, add _-prefix ignore for unused vars, suppress react-refresh for components/ui/

ESLint fixes:
- frontend/src/components/ProtectedRoute.test.tsx: replace any with AuthState type
- frontend/src/store/auth-store.ts: export AuthState interface for test usage
- frontend/src/components/layout/OrgSwitcher.tsx: wrap organizations in useMemo to fix exhaustive-deps
- frontend/src/components/ui/combobox.tsx: remove unused children prop from two components
- frontend/src/components/ui/sidebar.tsx: replace Math.random with deterministic width, fix indentation
- frontend/src/pages/auth/RegisterPage.tsx: rename _ to _confirmPassword for unused-vars rule

Cleanup:
- .gitignore: keep review/ ignored from git

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,15 +1,43 @@
 repos:
-  - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.15.0
+  # Backend - Ruff (Linting & Formatting)
+  - repo: local
     hooks:
       - id: ruff
-        args: [--fix]
+        name: ruff-check
+        entry: ruff check --fix
+        language: system
+        types: [python]
+        files: ^backend/
       - id: ruff-format
-  - repo: https://github.com/pre-commit/mirrors-eslint
-    rev: v10.0.0
+        name: ruff-format
+        entry: ruff format
+        language: system
+        types: [python]
+        files: ^backend/
+
+  # Frontend - ESLint & Prettier
+  - repo: local
     hooks:
       - id: eslint
-  - repo: https://github.com/pre-commit/mirrors-prettier
-    rev: v4.0.0-alpha.8
-    hooks:
+        name: eslint
+        entry: npm run lint --prefix frontend
+        language: system
+        types: [javascript, jsx, ts, tsx]
+        files: ^frontend/
+        pass_filenames: false
       - id: prettier
+        name: prettier
+        entry: npm run format --prefix frontend
+        language: system
+        types: [javascript, jsx, ts, tsx, json, css, yaml, html]
+        files: ^frontend/
+        pass_filenames: false
+
+  # Standard Hooks
+  - repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v4.5.0
+    hooks:
+      - id: trailing-whitespace
+      - id: end-of-file-fixer
+      - id: check-yaml
+      - id: check-merge-conflict
