feat(api): add Redis-backed rate limiting with slowapi
New files:
- backend/app/core/rate_limit.py: Limiter instance with Redis storage, default 60/min global limit, and JSON 429 handler

Modified:
- backend/app/main.py: wire limiter into app state, register RateLimitExceeded handler, add SlowAPIMiddleware
- backend/app/api/v1/endpoints/auth.py: stricter per-endpoint limits — register 5/hour, login 10/minute, refresh 30/minute
- backend/pyproject.toml: add slowapi>=0.1.9 dependency
- backend/uv.lock: lock slowapi, limits, deprecated, wrapt

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -23,6 +23,8 @@ dependencies = [
     "python-jose[cryptography]>=3.5.0",
     "bcrypt>=4.0.0",
     "python-multipart>=0.0.22",
+    # Rate Limiting
+    "slowapi>=0.1.9",
     # Redis
     "redis>=7.1.0",
     # Background Tasks
