fix(auth): use Response parameter for cookies and add test infrastructure
Modified:
- .pre-commit-config.yaml: switch ruff hooks from local venv to ruff-pre-commit repo
- backend/app/api/v1/endpoints/auth.py: replace broken request.response with proper Response parameter on register, login, refresh, logout

New files:
- backend/tests/conftest.py: rewrite with savepoint-based rollback (join_transaction_mode) and rate limiter disable
- backend/tests/api/v1/test_auth.py: add register endpoint test

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,18 +1,12 @@
 repos:
   # Backend - Ruff (Linting & Formatting)
-  - repo: local
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    rev: v0.15.0
     hooks:
       - id: ruff
-        name: ruff-check
-        entry: ruff check --fix
-        language: system
-        types: [python]
+        args: [--fix]
         files: ^backend/
       - id: ruff-format
-        name: ruff-format
-        entry: ruff format
-        language: system
-        types: [python]
         files: ^backend/
 
   # Frontend - ESLint & Prettier
