--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -72,7 +72,7 @@ target-version = "py313"
 
 [tool.ruff.lint]
 select = ["E", "F", "I", "UP"]
-ignore = []
+ignore = ["E501"]
 
 [tool.ruff.lint.isort]
 known-first-party = ["app"]
