--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,3 +55,22 @@ jobs:
         DATABASE_URL: postgresql+asyncpg://sophikon_user:Soph1k0n_Dev_2026!@localhost:5432/sophikon_test
       run: |
         uv run pytest
+
+  deploy-landing:
+    needs: test
+    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+
+    - name: Replace placeholders
+      run: |
+        sed -i 's|__APP_URL__|https://app.sophikon.eu|g' landing/index.html
+
+    - name: Deploy to S3
+      env:
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        AWS_REGION: ${{ secrets.AWS_REGION }}
+      run: |
+        aws s3 sync landing/ s3://${{ secrets.S3_LANDING_BUCKET }} --delete
