--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,5 +1,9 @@
 # API Base URL
 # If not set, the frontend will default to relative path "/api/v1"
-# For local development with a separate backend, you might use:
-# VITE_API_BASE_URL=http://localhost:8000/api/v1
+# Local development (uses Vite proxy, no need to set):
+#   VITE_API_BASE_URL=
+# Local development (direct backend, no proxy):
+#   VITE_API_BASE_URL=http://localhost:8000/api/v1
+# Production:
+#   VITE_API_BASE_URL=https://api.sophikon.eu/api/v1
 VITE_API_BASE_URL=
