feat(infra): add production Dockerfile for backend
New files:
- backend/Dockerfile: multi-stage build (uv + python:3.13-slim), installs prod deps only
- backend/start.sh: entrypoint script that runs alembic migrations before starting uvicorn
- backend/.dockerignore: excludes tests, .env, __pycache__, .venv from image
- backend/.gitattributes: enforce LF line endings for start.sh (prevents Docker exec errors)

Modified:
- docker-compose.yml: add backend service with env overrides for Docker networking

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,25 @@ services:
     volumes:
       - redis_data:/data
 
+  backend:
+    build:
+      context: ./backend
+    container_name: sophikon-backend
+    restart: unless-stopped
+    ports:
+      - "8000:8000"
+    env_file:
+      - ./backend/.env
+    environment:
+      # Override localhost → container name for Docker networking
+      DATABASE_URL: postgresql+asyncpg://sophikon_user:${POSTGRES_PASSWORD:-Soph1k0n_Dev_2026!}@postgres:5432/sophikon
+      REDIS_URL: redis://redis:6379/0
+    depends_on:
+      postgres:
+        condition: service_healthy
+      redis:
+        condition: service_started
+
 volumes:
   postgres_data:
   redis_data:
