--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,6 +45,18 @@ services:
       redis:
         condition: service_started
 
+  nginx:
+    image: nginx:1.28-alpine
+    container_name: sophikon-nginx
+    restart: unless-stopped
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf:ro
+    depends_on:
+      - backend
+
 volumes:
   postgres_data:
   redis_data:
