--- a/backend/.env.example
+++ b/backend/.env.example
@@ -6,3 +6,10 @@ SECRET_KEY=change-me-generate-a-real-key
 
 # Environment
 ENV=development
+
+# Email (SMTP)
+MAIL_SERVER=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME=your-email@gmail.com
+MAIL_PASSWORD=your-gmail-app-password
+MAIL_FROM=your-email@gmail.com
