fix(security): harden auth, config validation, and API before deployment
Modified:
- backend/app/core/config.py: add model_validator that rejects empty/placeholder
  SECRET_KEY and DATABASE_URL at startup, require SECRET_KEY >= 32 chars
- backend/app/main.py: disable Swagger/ReDoc/OpenAPI in production (ENV != development)
- backend/app/schema/auth.py: add max_length=128 to register and login password
  fields to prevent bcrypt DoS
- backend/app/api/v1/endpoints/projects.py: add org membership check before listing
  projects (defense in depth, was already safe but now explicit)
- backend/app/service/project_service.py: update docstring to clarify caller
  responsibility for org membership check
- docker-compose.yml: remove hardcoded fallback DB password, require POSTGRES_PASSWORD
  from environment
- backend/tests/api/v1/test_email_verification.py: update tests for GET redirect
  pattern on verify-email endpoint
- docs/03-implementation/action-items.md: mark email verification steps as complete

New files:
- .env.example: root-level env example for docker-compose (POSTGRES_PASSWORD)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     restart: unless-stopped
     environment:
       POSTGRES_USER: sophikon_user
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-Soph1k0n_Dev_2026!}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: sophikon
     ports:
       - "5433:5432" # Using 5433 to avoid conflict with local PostgreSQL
@@ -37,7 +37,7 @@ services:
       - ./backend/.env
     environment:
       # Override localhost → container name for Docker networking
-      DATABASE_URL: postgresql+asyncpg://sophikon_user:${POSTGRES_PASSWORD:-Soph1k0n_Dev_2026!}@postgres:5432/sophikon
+      DATABASE_URL: postgresql+asyncpg://sophikon_user:${POSTGRES_PASSWORD}@postgres:5432/sophikon
       REDIS_URL: redis://redis:6379/0
       # MailPit SMTP (dev profile)
       MAIL_SERVER: ${MAIL_SERVER:-mailpit}
