fix(ci): add SECRET_KEY env var for test job
Settings validator requires SECRET_KEY to be set. CI had no .env file
so only DATABASE_URL was provided, causing import-time crash in conftest.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,6 +53,7 @@ jobs:
     - name: Run tests
       env:
         DATABASE_URL: postgresql+asyncpg://sophikon_user:Soph1k0n_Dev_2026!@localhost:5432/sophikon_test
+        SECRET_KEY: ci-test-only-not-a-real-secret-key-0000000000
       run: |
         uv run pytest
 
