fix(ci): run alembic migrations before pytest
Tests expect database tables to exist. The CI creates an empty PostgreSQL
database but never ran migrations, causing UndefinedTableError on every query.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,6 +50,13 @@ jobs:
         uv run ruff check .
         uv run ruff format --check .
 
+    - name: Run migrations
+      env:
+        DATABASE_URL: postgresql+asyncpg://sophikon_user:Soph1k0n_Dev_2026!@localhost:5432/sophikon_test
+        SECRET_KEY: ci-test-only-not-a-real-secret-key-0000000000
+      run: |
+        uv run alembic upgrade head
+
     - name: Run tests
       env:
         DATABASE_URL: postgresql+asyncpg://sophikon_user:Soph1k0n_Dev_2026!@localhost:5432/sophikon_test
