chore: rename domain from sophikon.eu to sophikon.org
Modified:
- .github/workflows/ci.yml: update app URL placeholder
- backend/app/core/config.py: update CORS origins
- docker-compose.yml: update MAIL_FROM
- frontend/.env.example: update production API URL comment
- landing/index.html: update canonical URL and links
- nginx/nginx.conf: update server_name
- nginx/nginx.ssl.conf: update server_name and SSL cert paths
- docs/02-design/landing-page-mockup.html: update URLs
- docs/03-implementation/action-items.md: update URLs

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,7 +44,7 @@ services:
       MAIL_PORT: ${MAIL_PORT:-1025}
       MAIL_USERNAME: ""
       MAIL_PASSWORD: ""
-      MAIL_FROM: noreply@sophikon.eu
+      MAIL_FROM: noreply@sophikon.org
       MAIL_STARTTLS: "false"
       MAIL_SSL_TLS: "false"
       # Email verification redirect URLs
