--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -4,7 +4,7 @@ upstream backend {
 
 server {
     listen 80;
-    server_name localhost api.sophikon.eu;
+    server_name localhost api.sophikon.org;
 
     # Max request body size (file uploads, etc.)
     client_max_body_size 10M;
