--- a/nginx/nginx.ssl.conf
+++ b/nginx/nginx.ssl.conf
@@ -5,7 +5,7 @@ upstream backend {
 # Redirect HTTP → HTTPS
 server {
     listen 80;
-    server_name api.sophikon.eu;
+    server_name api.sophikon.org;
 
     # Let's Encrypt challenge (certbot needs this)
     location /.well-known/acme-challenge/ {
@@ -20,11 +20,11 @@ server {
 # HTTPS server
 server {
     listen 443 ssl;
-    server_name api.sophikon.eu;
+    server_name api.sophikon.org;
 
     # SSL certificates (managed by certbot)
-    ssl_certificate /etc/letsencrypt/live/api.sophikon.eu/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/api.sophikon.eu/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/api.sophikon.org/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/api.sophikon.org/privkey.pem;
 
     # Modern SSL settings
     ssl_protocols TLSv1.2 TLSv1.3;
