--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -73,7 +73,7 @@ jobs:
 
     - name: Replace placeholders
       run: |
-        sed -i 's|__APP_URL__|https://app.sophikon.eu|g' landing/index.html
+        sed -i 's|__APP_URL__|https://app.sophikon.org|g' landing/index.html
 
     - name: Deploy to S3
       env:
