--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -5,5 +5,5 @@
 # Local development (direct backend, no proxy):
 #   VITE_API_BASE_URL=http://localhost:8000/api/v1
 # Production:
-#   VITE_API_BASE_URL=https://api.sophikon.eu/api/v1
+#   VITE_API_BASE_URL=https://api.sophikon.org/api/v1
 VITE_API_BASE_URL=
