feat(ci): add frontend auto-deploy to S3 + CloudFront
- .github/workflows/ci.yml: add deploy-frontend job that builds, uploads to S3, and invalidates CloudFront cache on push to main
- frontend/src/features/auth/store/auth-store.test.ts: add missing email_verified to mock user, fixing TypeScript build error
- frontend/package-lock.json: sync lock file with package.json

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,6 +64,45 @@ jobs:
       run: |
         uv run pytest
 
+  deploy-frontend:
+    needs: test
+    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./frontend
+    steps:
+    - uses: actions/checkout@v4
+
+    - name: Setup Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: 20
+        cache: npm
+        cache-dependency-path: frontend/package-lock.json
+
+    - name: Install dependencies
+      run: npm install
+
+    - name: Build
+      env:
+        VITE_API_BASE_URL: https://api.sophikon.org/api/v1
+      run: npm run build
+
+    - name: Deploy to S3
+      env:
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        AWS_REGION: ${{ secrets.AWS_REGION }}
+      run: aws s3 sync dist/ s3://${{ secrets.S3_FRONTEND_BUCKET }} --delete
+
+    - name: Invalidate CloudFront cache
+      env:
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        AWS_REGION: ${{ secrets.AWS_REGION }}
+      run: aws cloudfront create-invalidation --distribution-id ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID }} --paths "/*"
+
   deploy-landing:
     needs: test
     if: github.ref == 'refs/heads/main' && github.event_name == 'push'
