--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,6 +64,34 @@ jobs:
       run: |
         uv run pytest
 
+  deploy-backend:
+    needs: test
+    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+    runs-on: ubuntu-latest
+    steps:
+    - name: Deploy to EC2
+      uses: appleboy/ssh-action@v1
+      with:
+        host: ${{ secrets.EC2_HOST }}
+        username: ubuntu
+        key: ${{ secrets.EC2_SSH_KEY }}
+        script: |
+          cd /opt/sophikon
+          sudo git pull
+          sudo docker compose up -d --build
+
+    - name: Notify Discord
+      if: always()
+      run: |
+        if [ "${{ job.status }}" = "success" ]; then
+          MSG="✅ **Backend deploy succeeded** — ${{ github.event.head_commit.message }}"
+        else
+          MSG="❌ **Backend deploy failed** — ${{ github.event.head_commit.message }}"
+        fi
+        curl -s -H "Content-Type: application/json" \
+          -d "{\"content\": \"$MSG\"}" \
+          "${{ secrets.DISCORD_DEPLOYS_WEBHOOK }}" > /dev/null
+
   deploy-frontend:
     needs: test
     if: github.ref == 'refs/heads/main' && github.event_name == 'push'
@@ -103,6 +131,18 @@ jobs:
         AWS_REGION: ${{ secrets.AWS_REGION }}
       run: aws cloudfront create-invalidation --distribution-id ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID }} --paths "/*"
 
+    - name: Notify Discord
+      if: always()
+      run: |
+        if [ "${{ job.status }}" = "success" ]; then
+          MSG="✅ **Frontend deploy succeeded** — ${{ github.event.head_commit.message }}"
+        else
+          MSG="❌ **Frontend deploy failed** — ${{ github.event.head_commit.message }}"
+        fi
+        curl -s -H "Content-Type: application/json" \
+          -d "{\"content\": \"$MSG\"}" \
+          "${{ secrets.DISCORD_DEPLOYS_WEBHOOK }}" > /dev/null
+
   deploy-landing:
     needs: test
     if: github.ref == 'refs/heads/main' && github.event_name == 'push'
@@ -121,3 +161,15 @@ jobs:
         AWS_REGION: ${{ secrets.AWS_REGION }}
       run: |
         aws s3 sync landing/ s3://${{ secrets.S3_LANDING_BUCKET }} --delete
+
+    - name: Notify Discord
+      if: always()
+      run: |
+        if [ "${{ job.status }}" = "success" ]; then
+          MSG="✅ **Landing deploy succeeded** — ${{ github.event.head_commit.message }}"
+        else
+          MSG="❌ **Landing deploy failed** — ${{ github.event.head_commit.message }}"
+        fi
+        curl -s -H "Content-Type: application/json" \
+          -d "{\"content\": \"$MSG\"}" \
+          "${{ secrets.DISCORD_DEPLOYS_WEBHOOK }}" > /dev/null
